Colab을 통해 생성됨

--- a/2_데이터분석_myproject20240430.ipynb
+++ b/2_데이터분석_myproject20240430.ipynb
@@ -22764,6 +22764,9 @@
       "source": [
         "# 읍면동별로 아이콘 컬러를 다르게 설정하기\n",
         "# help(folium.Icon)\n",
+        "from folium.plugins import MarkerCluster\n",
+        "\n",
+        "df = df.sort_values(by=['단지명'], ascending=True)\n",
         "colors = ['red', 'blue', 'green', 'purple', 'orange', 'darkred', 'lightred', 'beige', 'darkblue', 'darkgreen', 'cadetblue', 'darkpurple', 'white', 'pink', 'lightblue', 'lightgreen', 'gray', 'black', 'lightgray']\n",
         "v_idx = 0\n",
         "v_color = 'orange'\n",
@@ -22795,7 +22798,11 @@
         "        {df.loc[idx, '주소']}</div>\",\n",
         "        icon = folium.Icon(color=v_color, icon='cloud')\n",
         "        )\n",
-        "    marker.add_to(map)\n",
+        "    #marker.add_to(map)\n",
+        "\n",
+        "    marker_cluster = MarkerCluster().add_to(map)\n",
+        "    marker.add_to(marker_cluster)\n",
+        "\n",
         "\n",
         "map"
       ],
