--- a/3_머신러닝_분류_2_사이킷런_붓꽃분류_배포.ipynb
+++ b/3_머신러닝_분류_2_사이킷런_붓꽃분류_배포.ipynb
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "133d215c",
       "metadata": {
         "scrolled": true,
@@ -86,7 +86,7 @@
           "height": 1000
         },
         "id": "133d215c",
-        "outputId": "50b698ba-2825-4219-ad31-6b6e0cd84dc2"
+        "outputId": "24ca2359-f558-47b0-f206-0832839d42ab"
       },
       "outputs": [
         {
@@ -273,7 +273,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c9afaad4-ab06-4a24-b6ac-3068b481d5c3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-faa8d673-4ee4-486d-95af-9cf3175efdb6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -346,7 +346,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c9afaad4-ab06-4a24-b6ac-3068b481d5c3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-faa8d673-4ee4-486d-95af-9cf3175efdb6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -398,12 +398,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c9afaad4-ab06-4a24-b6ac-3068b481d5c3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-faa8d673-4ee4-486d-95af-9cf3175efdb6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c9afaad4-ab06-4a24-b6ac-3068b481d5c3');\n",
+              "        const element = document.querySelector('#df-faa8d673-4ee4-486d-95af-9cf3175efdb6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -423,8 +423,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9c57a95a-d200-463b-a492-a5d2835dbb06\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9c57a95a-d200-463b-a492-a5d2835dbb06')\"\n",
+              "<div id=\"df-3ad1ee60-9e98-410b-a64a-7eaaf5604ff8\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3ad1ee60-9e98-410b-a64a-7eaaf5604ff8')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -543,7 +543,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9c57a95a-d200-463b-a492-a5d2835dbb06 button');\n",
+              "        document.querySelector('#df-3ad1ee60-9e98-410b-a64a-7eaaf5604ff8 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -560,7 +560,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 7
         }
       ],
       "source": [
@@ -610,14 +610,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "22aeddd4",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "22aeddd4",
-        "outputId": "d97a407c-e267-42a0-e384-e7b6ba4a10af"
+        "outputId": "803738b2-712c-47b3-eea2-9e4b38e0a923"
       },
       "outputs": [
         {
@@ -669,14 +669,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "8f3c6914",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8f3c6914",
-        "outputId": "e3dc5cd8-5deb-4d02-a7dc-f0a942a28235"
+        "outputId": "435808a4-3efd-4960-d180-c212c7769d76"
       },
       "outputs": [
         {
@@ -701,12 +701,12 @@
         "# 모델 훈련\n",
         "model_knn.fit(x_train, y_train)\n",
         "# 예측(predict) 수행하기\n",
-        "y_pred_lr = model_knn.predict(x_test)\n",
-        "print('예측:', y_pred_lr)\n",
+        "y_pred_knn = model_knn.predict(x_test)\n",
+        "print('예측:', y_pred_knn)\n",
         "# 실제데이터와 예측데이터 비교하기\n",
         "print('실제:', y_test)\n",
         "# 평가 지표\n",
-        "print(f'정확도: {accuracy_score(y_test, y_pred_lr)}')\n"
+        "print(f'정확도: {accuracy_score(y_test,y_pred_knn)}')\n"
       ]
     },
     {
@@ -721,14 +721,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "4d5534e8",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4d5534e8",
-        "outputId": "db54d6fb-8b93-4e52-ef69-6e766438aa41"
+        "outputId": "20f220ea-4e2e-4004-8831-163747562c4f"
       },
       "outputs": [
         {
@@ -771,25 +771,59 @@
       "execution_count": null,
       "id": "6ad6794f",
       "metadata": {
-        "id": "6ad6794f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6ad6794f",
+        "outputId": "30e7cc6f-32b9-4783-8067-260749587dc6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "교차 검증 정확도(LR): [0.98 0.96 0.98]\n",
+            "교차 검증 정확도(KNN): [1.  1.  1.  1.  1.  1.  0.8 1.  1.  1.  1.  1.  1.  0.6 1.  0.8 1.  1.\n",
+            " 1.  0.8 1.  1.  0.8 1.  1.  1.  1.  1.  1.  1.  1. ]\n",
+            "교차 검증 평균 정확도(LR): 0.9733\n",
+            "교차 검증 평균 정확도(KNN): 0.9613\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        }
+      ],
       "source": [
         "# 테스트 데이터에만 과적합 될 수 있으므로 데이터를 여러개로 나누어 테스트를 여러번 수행하여 평균 정확도를 구함\n",
         "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "# 로지스틱회귀 교차 검증\n",
         "cv_score_lr = cross_val_score(model_lr, iris.data, iris.target,  # Estimator,X,Y값\n",
         "                           scoring='accuracy', cv = 3) # cv = 3, 3개로 쪼개어 검증(predict를 3회 수행)\n",
         "\n",
         "# KNN 교차 검증\n",
+        "cv_score_knn = cross_val_score(model_knn, iris.data, iris.target,  # Estimator,X,Y값\n",
+        "                           scoring='accuracy', cv = 31) # cv = 3, 3개로 쪼개어 검증(predict를 3회 수행)\n",
+        "\n",
         "\n",
         "\n",
         "# 내부적으로 Stratified K-Fold 사용됨, 평가지표를 한개만 구할 수 있어서 StatifiedKFold사용 권장\n",
         "print('교차 검증 정확도(LR):',cv_score_lr)\n",
-        "print('교차 검증 정확도(KNN):', )\n",
+        "print('교차 검증 정확도(KNN):',cv_score_knn )\n",
         "print('교차 검증 평균 정확도(LR):',np.round(np.mean(cv_score_lr),4))    # 예측 한 결과의 정확도들의 평균\n",
-        "print('교차 검증 평균 정확도(KNN):',  )"
+        "print('교차 검증 평균 정확도(KNN):', np.round(np.mean(cv_score_knn),4) )"
       ]
     },
     {
@@ -808,18 +842,38 @@
       "execution_count": null,
       "id": "cabe9269",
       "metadata": {
-        "id": "cabe9269"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cabe9269",
+        "outputId": "df7998dd-8c94-4739-d68d-a19c84b1007a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "예측(KNN):[0 0 2]\n",
+            "고흐의 붓꽃데이터 결과는? :\n",
+            "[2.7, 2.4, 1.64, 0.67]: 0->setosa\n",
+            "[2.7, 2.4, 1.64, 0.67]: 0->setosa\n",
+            "[5.8, 2.7, 5.1, 1.9]: 2->virginica\n"
+          ]
+        }
+      ],
       "source": [
+        "import numpy as np\n",
         "# 그림에서 수집한 데이터\n",
-        "X_test = np.array( )\n",
-        "\n",
+        "my = [[2.7, 2.4, 1.64, 0.67 ],[5.84, 5.84, 3, 2.16],[5.8, 2.7, 5.1, 1.9]]\n",
+        "X_test = np.array(my)\n",
         "# K-NN을 이용한 예측(predict) 수행\n",
-        "\n",
-        "\n",
+        "y_pred_knn_my = model_knn.predict(X_test)\n",
+        "print(f'예측(KNN):{y_pred_knn_my}')\n",
         "# 분류 결과 출력하기\n",
-        "print('고흐의 붓꽃데이터 결과는? :')\n"
+        "print('고흐의 붓꽃데이터 결과는? :')\n",
+        "name ={0:'setosa',1: 'versicolor',2: 'virginica'}\n",
+        "for i in y_pred_knn_my:\n",
+        "    print(f'{my[i]}: {i}->{name[i]}')"
       ]
     },
     {
